--- a/business.html
+++ b/business.html
@@ -7,31 +7,34 @@
     <link rel="stylesheet" href="business.css">
 </head>
 <body>
-    <div class="div1">
-        <div class="div2">
-            <h1 class="insight">Get <span id="span"> insights </span>that help<br> your business grow</h1>
-            <p class="note"> Discover the benefits of data analytics and make<br> better decisions regarding revenue,
-                 customer<br> experience, and overall efficiency.</p>
-            <div class="bottom">
-                <span>
-                    <h2 class="">10k+</h2>
-                    <p class="">companies</p>
-                </span>
-                <span>
-                    <h2>314</h2>
-                    <p>templates</p>
-                </span>
-                <span>
-                    <h2>12m+</h2>
-                    <p>queries</p>
-                </span>
+        <div class="div1">
+            <div class="div4">
+                <div class="cover1"></div>
+                <img src="image-header-desktop.jpg" alt="image" id="image1">
             </div>
+            <div class="div2">
+                <h1 class="insight">Get <span id="span"> insights </span>that help your business grow</h1>
+                <p class="note"> Discover the benefits of data analytics and make better decisions regarding revenue,
+                     customer experience, and overall efficiency.</p>
+                <div class="bottom">
+                    <span>
+                        <h2 class="">10k+</h2>
+                        <p class="sub">COMPANIES</p>
+                    </span>
+                    <span>
+                        <h2>314</h2>
+                        <p class="sub">TEMPLATES</p>
+                    </span>
+                    <span>
+                        <h2>12m+</h2>
+                        <p class="sub">QUERIES</p>
+                    </span>
+                </div>
+            </div>
+            <div class="div3">
+                <div class="cover2"></div>
+                <img src="image-header-desktop.jpg" alt="image" id="image2">
+            </div>        
         </div>
-        <div class="div3">
-            <div class="cover"></div>
-            <img src="image-header-desktop.jpg" alt="image" id="image">
-        </div>        
-    </div>
-
 </body>
 </html>
